# eeg-sleep-1

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
models/: simple_nn.onnx  simple_nn_model  tinyeegcnn.onnx
notebooks/: 01_data_exploration.ipynb  02_dl_models.ipynb
